--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -658,6 +658,13 @@ and the derived files           pxpic.pdf
 % either open a ticket on Github (\url{https://github.com/Skillmon/ltx_pxpic})
 % or email me (see the first page).
 %
+% Another similar package is \pkg{pixelart}, which, as of writing this, is
+% described as a ``working draft'' by its author. \pxpicname\ wasn't intended as
+% a direct competitor (I already started coding \pxpicname\ when I learned about
+% \pkg{pixelart}'s existence), but I took inspiration from the ``Bugs, Ideas,
+% Undefined behaviours'' section of \pkg{pixelart}'s documentation for the
+% syntax of |mode=px|.
+%
 %
 % \end{documentation}^^A=<<
 %
